# TCC-LUMI

./: .gitignore  main.py  requirements.txt  run.py
bot/: main.py
bot/commands/: geral.py  tradutor.py  voice.py
bot/libras/: translator.py
bot/voice/: processing.py  transcriber.py
bot/whisper/: __init__.py
src/lumi-bot/: .env.example  .gitignore  __main__.py  pyproject.toml  server.py  service.py
src/lumi-bot/bot/: config.py  main.py
src/lumi-bot/bot/commands/: geral.py  voice.py
src/lumi-bot/bot/libras/: client.py
src/lumi-bot/bot/whisper/: __init__.py
src/lumi-bot/config/: __init__.py
src/lumi-bot/websocket/: __init__.py  listeners.py  main.py  server.py  transcripts.py
src/lumi-web/: package-lock.json  package.json  socketio.ts
src/lumi-web/app/: page.tsx
src/tcc-lumi/: __init__.py  main.py  pyproject.toml
src/tcc-lumi/bot/: config.py
src/tcc-lumi/bot/voice/: processing.py
src/tcc-lumi/bot/whisper/: __init__.py
