[project]
name = "lumi-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "librosa>=0.11.0",
    "noisereduce>=3.0.3",
    "numpy>=2.2.6",
    "openai-whisper>=20240930",
    "py-cord>=2.6.1",
    "pynacl>=1.5.0",
    "pytorch-triton-rocm>=0.0.1",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-rocm", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-rocm", marker = "sys_platform == 'linux'" }]
# ROCm6 support relies on `pytorch-triton-rocm`, which should also be installed from the PyTorch index
# (and included in `project.dependencies`).
pytorch-triton-rocm = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true

[dependency-groups]
dev = ["ipykernel>=6.29.5", "mypy>=1.15.0", "pylint>=3.3.7"]
